--- a/test_oa_project/www/Templets/System/Personnel/department.html
+++ b/test_oa_project/www/Templets/System/Personnel/department.html
@@ -45,7 +45,7 @@
 				</th>
 				<th>
 					<span>ID</span>
-					{{# if($.getUrlParam('order')=='sort asc'){ }}
+					{{# if($.getUrlParam('order')=='department_id asc'){ }}
 					<i class="oergList on_sort" data-value="department_id desc"></i>
 					{{# }else{ }}
 					<i class="oergList on_sort" data-value="department_id asc"></i>
