--- a/www/Templets/System/Personnel/addPosition.html
+++ b/www/Templets/System/Personnel/addPosition.html
@@ -198,6 +198,7 @@
                 if(redata.code!=0){
                     layer.msg(redata.msg,{icon:2});
                 }else{
+                    layer.msg('操作成功',{icon:1});
                     window.location.href = "{:U('/System/Personnel/position')}";
                 };
             });
