--- a/www/Templets/System/Personnel/position.html
+++ b/www/Templets/System/Personnel/position.html
@@ -62,10 +62,10 @@
         </th>
         <th>
             <span>ID</span>
-            {{# if($.getUrlParam('order')=='sort asc'){ }}
-            <i class="oergList on_sort" data-value="department_id desc"></i>
+            {{# if($.getUrlParam('order')=='role_id asc'){ }}
+            <i class="oergList on_sort" data-value="role_id desc"></i>
             {{# }else{ }}
-            <i class="oergList on_sort" data-value="department_id asc"></i>
+            <i class="oergList on_sort" data-value="role_id asc"></i>
             {{# } }}
         </th>
         <th>职位名称</th>
