--- a/test_oa_project/www/Templets/System/Personnel/editPosition.html
+++ b/test_oa_project/www/Templets/System/Personnel/editPosition.html
@@ -19,7 +19,7 @@
                 <span><em>&gt;</em>修改职位权限</span>
             </div>
             <div class="topRight r">
-                <a href="{:U('System/Personnel/position')}" class="return">返回</a>
+                <a href="javascript:history.go(-1)" class="return">返回</a>
             </div>
         </div>
         <div class="addPerMiddle">
