--- a/www/Templets/System/Personnel/addPosition.html
+++ b/www/Templets/System/Personnel/addPosition.html
@@ -20,7 +20,7 @@
                 <span><em>&gt;</em>新增职位权限</span>
             </div>
             <div class="topRight r">
-                <a href="{:U('System/Personnel/position')}" class="return">返回</a>
+                <a href="javascript:history.go(-1)" class="return">返回</a>
             </div>
         </div>
         <div class="addPerMiddle">
