--- a/www/Templets/System/Information/msgList.html
+++ b/www/Templets/System/Information/msgList.html
@@ -114,7 +114,7 @@
             btn: ['确定','取消'] //按钮
         }, function(){
             $('.msg_list[data-id="'+data_id+'"]').addClass('dn');
-            common_ajax2(data,'/SystemApi/SystemUser/delMsg','no',_delhtml,1);
+            common_ajax2(data,'/SystemApi/Message/delMsg','no',_delhtml,1);
             layer.closeAll();
             function _delhtml(redata){
                 if(redata.code!=0){
@@ -193,7 +193,7 @@
             message_id : id,
             type : 'getInfo'
         };
-        common_ajax2(data,'','no',_redata,1);
+        common_ajax2(data,'/SystemApi/Message/getMsgInfo','no',_redata,1);
         function _redata(){};
     };
 </script>
